# DESERT_Underwater

DESERT_Framework/: mi_minimal.tcl
DESERT_Framework/DESERT/: Makefile.am  configure.ac
DESERT_Framework/DESERT/physical/uwmi_phy/: Makefile.am  initlib.cpp  uwmi-phy-default.tcl  uwmi-phy.cpp  uwmi-phy.h
DESERT_Framework/DESERT/propagation/uwmi_propagation/: Makefile.am  initlib.cpp  uwmi-mpropagation-default.tcl  uwmi-mpropagation.cpp  uwmi-mpropagation.h
DESERT_Framework/DESERT/samples/desert_samples/PHY/Ahoi/: uwahoi_application.tcl
DESERT_Framework/DESERT/samples/desert_samples/dbs/hermes/: hermes
DESERT_Framework/DESERT/samples/desert_samples/test_uwmi/: test_uwmi_load.tcl  test_uwmi_net.tcl  test_uwmi_phy.tcl
